# mdns_cpp

./: .gitignore  CMakeLists.txt
example/: discovery.cpp
include/mdns_cpp/: defs.hpp  mdns.hpp  utils.hpp
src/: mdns.cpp  mdns.h  utils.cpp
